# MyAI

./: README.md
multi-llm-client/: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  quickstart.py
multi-llm-client/examples/: advanced_usage.py  basic_usage.py
multi-llm-client/src/multi_llm_client/: __init__.py  base_provider.py  client.py  config.py  exceptions.py  models.py  utils.py
multi-llm-client/src/multi_llm_client/providers/: __init__.py  cerebras.py  groq.py  hyperbolic.py  together.py
multi-llm-client/tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_models.py  test_utils.py
